<resources>
    <string name="app_name">InClass09</string>
    <string name="login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="signUp">Sign Up!</string>
    <string name="content">Content</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_password_repeat">Repeat Password</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="addContact">Add Contact</string>

</resources>
